# fastapi-boas-praticas

./: .gitignore  README.md  pyproject.toml
api/: app.py
api/schemas/: message.py  schemas.py
tests/: test_app.py
